inline display + some fixes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </button>
 
                 <div v-if="currentBuild.length > 0" class="build-container">
-                    <h2>Your Random Build ({{ currentBuild.length }} spells)</h2>
+                    <h2>Your random build ({{ currentBuild.length }} spells)</h2>
                     <p class="build-info">Max 3 Offensive • Max 1 Defensive • Max 1 Area • Max 4 Utility • Max 1 Travel Skill (Total: 7 spells)</p>
                     <div class="spells-grid">
                         <div 
